# MarkerDetection

./: CMakeLists.txt  README.md  information.txt  package.xml
calibration_files/: camera.yaml  logitech.yml
include/: findmarker.h  helper.h  listener.h  poseEstimation.h
launch/: camera_start.launch  kinect_starting.launch  marker_detection.launch
msg/: MarkerVertices.msg  reference.msg
src/: findmarker.cpp  helper.cpp  list_main.cpp  listener.cpp  main.cpp  poseEstimation.cpp  talker.cpp
