<?xml version="1.0"?>

<package format="2">

  <name>marker_detection</name>
  <version>0.0.0</version>
  <description>The marker_detection package</description>
  <maintainer email="daniel.illner@outlook.de">daniel</maintainer>

  <license>TODO</license>


  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
  	<build_depend>rospy</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>tf</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cmake_modules</build_depend>

  	<exec_depend>roscpp</exec_depend>
  	<exec_depend>rospy</exec_depend>
  	<exec_depend>std_msgs</exec_depend>
  	<exec_depend>tf</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>image_transport</exec_depend>
	<exec_depend>cmake_modules</exec_depend>

	<exec_depend>message_runtime</exec_depend>

	
  	<export> </export>

</package>
